--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "postinstall": "yarn husky install && yarn run gen:theme-typings"
   },
   "dependencies": {
+    "@0xsequence/ethauth": "^0.7.0",
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "cross-fetch": "^3.1.5",
+    "ethers": "^5.6.8",
     "framer-motion": "^6",
     "next": "latest",
     "next-seo": "^5.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-framer": "^0.0.2",
+    "react-hook-form": "^7.31.3",
+    "walletconnect": "^1.7.8",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
