--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^6",
     "next": "latest",
     "next-seo": "^5.4.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-framer": "^0.0.2",
